change links to be relative

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </div>
         </div>
         <ul id="menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/photos.html">Photos</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/portfolio">Home</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         </header>
 
@@ -94,16 +94,16 @@
             <br>
             <div class="row img-slideshow-container">
                 <div class="col-md-3">
-                    <img src="/images/explore-okc.png" alt="Explore OKC" height=300px class="img-responsive img-thumbnail">
+                    <img src="images/explore-okc.png" alt="Explore OKC" height=300px class="img-responsive img-thumbnail">
                 </div>
                 <div class="col-md-3">
-                    <img src="/images/rock-climb.png" alt="Rock Climb" height=300px class="img-responsive img-thumbnail">
+                    <img src="images/rock-climb.png" alt="Rock Climb" height=300px class="img-responsive img-thumbnail">
                 </div>
                 <div class="col-md-3">
-                    <img src="/images/explore-okc.png" alt="Explore OKC" height=300px class="img-responsive img-thumbnail">
+                    <img src="images/explore-okc.png" alt="Explore OKC" height=300px class="img-responsive img-thumbnail">
                 </div>
                 <div class="col-md-3">
-                    <img src="/images/rock-climb.png" alt="Rock Climb" height=300px class="img-responsive img-thumbnail">
+                    <img src="images/rock-climb.png" alt="Rock Climb" height=300px class="img-responsive img-thumbnail">
                 </div>
             </div>
 
