change relative links on contact page

--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
             </div>
         </div>
         <ul id="menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/photos.html">Photos</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/portfolio">Home</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <form action="">
