added a new sentence to Hobbies section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </h2>
                     </header>
                     <section>
-                        In my spare time, I enjoy exploring the city and rock climbing.
+                        In my spare time, I enjoy exploring the city and rock climbing. I also like drinking coffee.
                     </section>
                 </article>
             </main>
